--- a/app/src/main/res/layout/swipe_list_item.xml
+++ b/app/src/main/res/layout/swipe_list_item.xml
@@ -23,7 +23,7 @@
             android:id="@+id/delete"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorAccent"
+            android:background="@color/colorDone"
             android:textColor="@android:color/tab_indicator_text"
             android:text="@string/done_button_text" />
 
