--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="colorPrimary">#ff1744</color>
     <color name="colorPrimaryDark">#c4001d</color>
-    <color name="colorAccent">#9EFF70</color>
+    <color name="colorAccent">#2A8BFF</color>
+    <color name="colorDone">#A1FF74</color>
 </resources>
