added age of item to list

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#ff1744</color>
     <color name="colorPrimaryDark">#c4001d</color>
     <color name="colorAccent">#2A8BFF</color>
-    <color name="colorDone">#A1FF74</color>
+    <color name="colorDone">#17ff5e</color>
 </resources>
