--- a/app/src/main/res/layout/swipe_list_item.xml
+++ b/app/src/main/res/layout/swipe_list_item.xml
@@ -38,10 +38,19 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight=".70"
             android:layout_height="wrap_content"
             android:padding="20dp"
             android:id="@+id/label"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight=".30"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:padding="20dp"
+            android:id="@+id/createdDate"/>
 
     </LinearLayout>
     <!-- Surface View End -->
